<resources>
    <!-- String dùng toàn cục -->
    <string name="app_name">Health Care</string>

    <!--String dung cho navagationr content UI-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- String dùng cho Nav UI-->
    <string name="home">Trang Chủ</string>
    <string name="feature">Chức năng</string>
    <string name="work_schedule">Lịch làm việc</string>
    <string name="patient_list">Danh sách đặt khám</string>
    <string name="communicate">Liên hệ</string>
    <string name="logout">Đăng Xuất</string>

    <string name="action_settings">Cài đặt</string>
    <string name="title_activity_login">Đăng nhập</string>

    <!--String dùng cho registe UI -->
    <string name="register_header">Đăng Kí</string>
    <string name="submit_register_action">Tạo Tài Khoản</string>
    <string name="register_name">Họ tên</string>
    <string name="register_user_name">Tên tài khoản</string>
    <string name="register_password">Mật khẩu</string>
    <string name="register_confirm_password">Xác nhận mật khẩu</string>
    <string name="register_email">Email</string>
    <string name="register_phone">Số điện thoại</string>
    <string name="register_birth_day">Ngày sinh</string>
    <string name="register_passport">Hộ chiếu</string>
    <string name="register_clinic_name">Tên phòng khám</string>
    <string name="register_clinic_address">Địa chỉ phòng khám</string>
    <string name="register_speciality">Chuyên ngành</string>
    <string name="register_experience">Kinh nghiệm</string>
    <string name="register_doctor_address">Địa chỉ thường trú</string>
    <string name="register_return_login_action">Đăng Nhập</string>
    <string name="register_error_invalid_user_name">Đăng Nhập</string>
    <string name="register_error_invalid_email">Đăng Nhập</string>
    <string name="register_error_field_required">Thông tin còn thiếu</string>
    <string name="register_error_invalid_password">Mật khẩu cần lớn hơn 4 kí tự</string>
    <string name="register_error_invalid_confirm_password">Mật khẩu không trùng</string>


    <!-- String dùng cho sign in UI -->
    <string name="login_user_name">Tài khoản</string>
    <string name="login_password">Mật khẩu</string>
    <string name="login_submit_action">Đăng Nhập</string>
    <string name="login_error_invalid_user_name">Tên đăng nhập phải lớn hơn 8 kí tự</string>
    <string name="login_error_invalid_password">Mật khẩu phải lớn hơn 4 kí tự</string>
    <string name="login_error_incorrect_password">Sai mật khẩu</string>
    <string name="error_field_required">Thông tin còn thiếu</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        ""
    </string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_register">Đăng Kí</string>

    <string name="sign_up">Sign up</string>
    <string name="sign_up_image">Header for app</string>
</resources>
