<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/feature">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_work_schedule"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/work_schedule" />
        <item
            android:id="@+id/nav_patient_list"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/patient_list" />
        <item
            android:id="@+id/nav_communicate"
            android:icon="@drawable/ic_call_black_24dp"
            android:title="@string/communicate" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_arrow_back_black_24dp"
            android:title="@string/logout" />
    </group>
    </item>

</menu>
